# exchange-agentic-ai

./: .gitignore  README.md  config.env  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_api_calls.py
.cursor/: issue_content.md  scratchpad.md
.ipynb_checkpoints/: openhorizon_analysis-checkpoint.ipynb
docs/: ai_integration_guide.md  configuration_guide.md  metrics_flow.md  metrics_schema.md  node_agent_integration_guide.md  service_agent_integration_guide.md  testing.md  troubleshooting_guide.md  usage_examples.md
docs/api/: README.md  base_agent.md  endpoints.md  metrics_collector.md  node_agent.md  node_metrics_collector.md  openapi.yaml  service_metrics_collector.md
openhorizon_client/: service.py
scripts/: fetch_api_docs.py
src/: credentials.py  exceptions.py  exchange_client.py  health.py  metrics.py  nodes.py  organizations.py  services.py  validation.py
src/ai/: __init__.py  base.py  metrics.py  node_agent.py  node_metrics.py  organization_agent.py  organization_metrics.py  service_agent.py  service_metrics.py  user_agent.py  user_metrics.py
src/exchange/: __init__.py  client.py
tests/: test_base_agent.py  test_base_metrics.py  test_credentials.py  test_exchange_client.py  test_health.py  test_metrics.py  test_metrics_api_integration.py  test_metrics_integration.py  test_metrics_performance.py  test_node_agent_integration.py  test_node_metrics.py  test_nodes.py  test_organizations.py  test_service.py  test_service_agent.py  test_service_agent_integration.py  test_service_endpoints.py  test_service_metrics.py  test_services.py
(+12 files in other folders)
